--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,6 +9,7 @@
 	@@include("layout/headerNav.html")
 	<main role="main">
 		@@include("sections/sectionJumbo.html")
+		@@include("sections/sectionGallery.html")
 	</main> 
 	@include("layout/footer.html") 
 
