--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,9 +10,10 @@
 	<main role="main">
 		@@include("sections/sectionJumbo.html")
 		@@include("sections/sectionGallery.html")
+		@@include("sections/sectionInfo.html")
 	</main> 
-	@include("layout/footer.html") 
-
+	@@include("layout/footer.html") 
+ 
 </body>
 </html>
   		 		 			    
