--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,7 @@
 		@@include("sections/sectionJumbo.html")
 		@@include("sections/sectionGallery.html")
 		@@include("sections/sectionInfo.html")
+		@@include("sections/sectionPres.html")
 	</main> 
 	@@include("layout/footer.html") 
  
