--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,6 +12,7 @@
 		@@include("sections/sectionGallery.html")
 		@@include("sections/sectionInfo.html")
 		@@include("sections/sectionPres.html")
+		@@include("sections/sectionForm.html")
 	</main> 
 	@@include("layout/footer.html") 
  
